# motor_controller

./: .gitignore  CMakeLists.txt  controller_data.json  package.xml
include/: Commands.hpp  ControlInterface.hpp  ReadJSON.hpp  Structs.hpp  UARTProtocol.hpp  print.hpp
src/: ControlInterface.cpp  ReadJSON.cpp  UARTProtocol.cpp  main.cpp  print.cpp
